[package]
name = "tzsp_tools"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
nom = "8.0.0"
thiserror = "2.0.12"
tokio = { version = "1", features = ["full"] }
pcap = "2.2.0"
libc = "0.2.174"
log = "0.4.27"
env_logger = "0.11.8"

[dev-dependencies]
hex = "0.4.3"
