[package]
name = "tzsp"
description = "A CLI tool to listen for TZSP packets and convert them to PCAP"
repository = "https://github.com/riccz/tzsp"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0+"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.27"
nom = "8.0.0"
pcap-file = "2.0.0"
thiserror = "2.0.12"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
hex = "0.4.3"
